--- a/css/_container.scss
+++ b/css/_container.scss
@@ -6,8 +6,7 @@ main{
     position: absolute;
 
     #card1{
-      width: 300px;
-      height: 300px;
+      max-width: 300px;
       padding: 25px;
       border-radius: 20px;
       z-index: 2;
@@ -75,7 +74,7 @@ main{
         color: var(--White);
         text-transform: uppercase;
         letter-spacing: 3px;
-        cursor: pointer;
+        
         user-select: none;
         &:hover{
             background: var(--White);
