--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,7 @@ main {
   position: absolute;
 }
 main #card1 {
-  width: 300px;
-  height: 300px;
+  max-width: 300px;
   padding: 25px;
   border-radius: 20px;
   z-index: 2;
@@ -105,7 +104,6 @@ main #card1 button {
   color: var(--White);
   text-transform: uppercase;
   letter-spacing: 3px;
-  cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
